--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "description": "An open source implementation of the Claude built-in text editor tool",
   "version": "0.0.1",
   "type": "module",
-  "bin": {
-    "mcp-server-text-editor": "dist/index.js"
-  },
+  "bin": "dist/index.js",
   "files": [
     "dist"
   ],
@@ -16,6 +14,7 @@
   "homepage": "https://github.com/bhouston/mcp-server-text-editor",
   "scripts": {
     "build": "tsc && chmod 755 ./dist/index.js",
+    "start": "node dist/index.js",
     "typecheck": "pnpm -r typecheck",
     "lint": "eslint . --fix",
     "format": "prettier . --write",
