working npx load.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "mcp-server-text-editor",
   "description": "An open source implementation of the Claude built-in text editor tool",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
-  "bin": "dist/index.js",
+  "bin": "bin/cli.js",
   "files": [
     "dist"
   ],
@@ -22,7 +22,6 @@
     "clean:all": "rimraf node_modules dist",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage"
   },
   "keywords": [
